build: full coverage

--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "src/index.js",
   "scripts": {
     "build:schema": "ipld-schema to-json README.md > src/schema.json",
-    "test": "mocha test/test-*.js"
+    "coverage": "nyc --reporter=html mocha test/test-*.js && npx http-server coverage",
+    "pre:test": "standard",
+    "test": "hundreds mocha test/test-*.js"
   },
   "keywords": [],
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (https://www.mikealrogers.com/)",
   "license": "(Apache-2.0 AND MIT)",
   "dependencies": {
     "@ipld/block": "^2.1.4",
-    "hundreds": "0.0.2",
-    "ipld-schema": "^0.3.2",
     "ipld-schema-validation": "^0.3.0"
   },
   "devDependencies": {
+    "hundreds": "0.0.2",
+    "ipld-schema": "^0.3.2",
     "mocha": "^7.1.1",
     "standard": "^14.3.3"
   }
