--- a/package.json
+++ b/package.json
@@ -5,48 +5,37 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "rollup --config rollup.config.js",
-    "build:schema": "ipld-schema to-json README.md > schema/schema.json",
-    "prepublishOnly": "npm run build",
     "lint": "standard",
-    "test:cjs": "npm run build && mocha dist/test/test-*.cjs --timeout=5000",
-    "test:node": "hundreds mocha test/test-*.js --timeout=5000",
-    "test:browser": "polendina --cleanup test/test-*.js",
-    "test": "npm run lint && npm run test:node && npm run test:browser && npm run test:cjs",
+    "build": "npm_config_yes=true npx ipjs@latest build --tests",
+    "publish": "npm_config_yes=true npx ipjs@latest publish",
+    "test:cjs": "npm run build && mocha dist/cjs/node-test/test-*.js",
+    "test:node": "hundreds mocha test/test-*.js",
+    "test:browser": "polendina --cleanup dist/cjs/node-test/test-*.js",
+    "test": "npm run lint && npm run test:node && npm run test:cjs && npm run test:browser",
     "coverage": "c8 --reporter=html mocha test/test-*.js && npx st -d coverage -p 8080"
-  },
-  "browser": {
-    "@ipld/fbl/schema": "./schema/index.js"
   },
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
       "import": "./index.js"
     },
-    "./bare.js": {
-      "require": "./dist/bare.cjs",
+    "./bare": {
       "import": "./bare.js"
-    },
-    "./schema": {
-      "require": "./schema/schema.cjs",
-      "browser": "./schema/index.js",
-      "import": "./schema/schema.mjs"
     }
   },
   "keywords": [],
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (https://www.mikealrogers.com/)",
   "license": "(Apache-2.0 AND MIT)",
   "dependencies": {
-    "@ipld/block": "^5.0.0",
-    "@ipld/schema-validation": "1.0.0",
+    "@ipld/block": "^6.0.3",
+    "@ipld/schema-validation": "1.0.3",
     "buffer": "^5.6.0"
   },
   "devDependencies": {
-    "hundreds": "0.0.7",
+    "hundreds": "0.0.8",
     "ipld-schema": "^0.3.2",
-    "mocha": "^8.0.1",
-    "polendina": "^1.0.0",
-    "rollup": "^2.18.0",
+    "mocha": "^8.1.1",
+    "polendina": "^1.1.0",
+    "rollup": "^2.26.4",
     "standard": "^14.3.4"
   }
 }
