--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "standard",
     "build": "npm_config_yes=true npx ipjs@latest build --tests",
+    "build:schema": "echo 'export default ' > schema.js && ipld-schema to-json README.md >> schema.js && standard --fix schema.js",
     "publish": "npm_config_yes=true npx ipjs@latest publish",
     "test:cjs": "npm run build && mocha dist/cjs/node-test/test-*.js",
     "test:node": "hundreds mocha test/test-*.js",
@@ -27,15 +28,14 @@
   "license": "(Apache-2.0 AND MIT)",
   "dependencies": {
     "@ipld/block": "^6.0.3",
-    "@ipld/schema-validation": "1.0.3",
+    "@ipld/schema-validation": "1.1.0",
     "buffer": "^5.6.0"
   },
   "devDependencies": {
     "hundreds": "0.0.8",
     "ipld-schema": "^0.3.2",
-    "mocha": "^8.1.1",
+    "mocha": "^8.1.3",
     "polendina": "^1.1.0",
-    "rollup": "^2.26.4",
     "standard": "^14.3.4"
   }
 }
