--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (https://www.mikealrogers.com/)",
   "license": "(Apache-2.0 AND MIT)",
   "dependencies": {
-    "@ipld/block": "^6.0.3",
     "@ipld/schema-validation": "1.1.0",
-    "buffer": "^5.6.0"
+    "buffer": "^5.7.0",
+    "multiformats": "^4.3.1"
   },
   "devDependencies": {
-    "hundreds": "0.0.8",
-    "ipld-schema": "^0.3.2",
-    "mocha": "^8.1.3",
+    "@ipld/dag-cbor": "^2.0.2",
+    "hundreds": "0.0.9",
+    "ipld-schema": "^0.4.0",
+    "mocha": "^8.2.0",
     "polendina": "^1.1.0",
-    "standard": "^14.3.4"
+    "standard": "^15.0.1"
   }
 }
